Remove unneeded --add-opens